# mipsii

./: mipsii.py  model.pkl  predictions.txt  pyproject.toml  requirements.txt  test_mipsii.py
