[tool.poetry]
name = "mipsii"
version = "0.1.0"
description = ""
authors = ["leostre <strelllleo@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.1"
pytest = "^7.4.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
